--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,4 +10,5 @@ reqwest = { version = "0.12", features = ["json"] }
 serde = { version = "1.0.216", features = ["std", "derive"] }
 serde_json = "1.0.133"
 tokio = { version = "1", features = ["full"] }
+url = { version = "2.5.4", features = ["serde", "std"] }
 urlencoding = "2.1.3"
