--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,9 @@
 name = "y2mp3"
 version = "1.0.0-alpha"
 edition = "2021"
+description = "Frontend to downloading music from cnvmp3.com"
+license = "MIT"
+repository = "https://github.com/estoneman/y2mp3"
 
 [dependencies]
 infer = "0.16.0"
