--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,10 +1,10 @@
 [package]
-name = "y2mp3"
+name = "photon"
 version = "1.0.0-alpha"
 edition = "2021"
 description = "Frontend to downloading music from cnvmp3.com"
 license = "MIT"
-repository = "https://github.com/estoneman/y2mp3"
+repository = "https://github.com/estoneman/photon"
 
 [dependencies]
 infer = "0.16.0"
