--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ license = "MIT"
 repository = "https://github.com/estoneman/photon"
 
 [dependencies]
+clap = { version = "4.5.23", features = ["derive", "cargo"] }
 infer = "0.16.0"
 regex = "1.11.1"
 reqwest = { version = "0.12", features = ["json"] }
